--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "axios": "^1.4.0",
         "chart.js": "3.3.2",
+        "moment": "^2.29.4",
         "pinia": "^2.1.4",
         "primeflex": "^3.2.1",
         "primeicons": "^6.0.1",
